--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,110 @@
-body {
-    font-family: Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    font-family: "Poppins", Arial, sans-serif;
     margin: 0;
     padding: 0;
-    text-align: center;
+    box-sizing: border-box;
+}
+body{
+    background-color: #0b203d;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    background-color: #0a192e;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #e0e0e0;
+    position: sticky;
+    z-index: 1000;
+}
+.logo {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #d52424;
+    margin-right: 20px;
+}
+.navbar{
+    display: flex;
+    gap: 20px;  
+}
+.navbar a{
+    font-weight: bold;
+    color: #a6aec5;
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+}
+.navbar a:hover{
+    color: #d52424;
+    border-color: #d52424;
+    transition: .25s;
+}
+.navbar #active{
+    color: #fff;
+    border-bottom: solid 2px #fff;
+}
+.menu{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.search-bar {
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.cart-icon {
+    color: #fff;
+    cursor: pointer;
+    position: relative;
+    margin-left: 15px;
+}
+.cart-badge {
+    position: absolute;
+    top: -6px;
+    right: -10px;
+    background: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 5px;
+    font-size: 0.7rem;
+}   
+.hamburger {
+    display: none;
+    font-size: 1.5rem;
+    margin-left: 15px;
+    cursor: pointer;
+    color: #fff;
+}
+@media (max-width: 768px) {
+    .navbar {
+    position: absolute;
+    top: 73px;
+    right: 0px;
+    width: 10em;
+    display: none;
+    flex-direction: column;
+    background: #0a192e;
+    border: 1px solid #e0e0e0;
+    border-right: none;
+    gap: 15px;
+    max-height: 0;
+    overflow: hidden;
+    }
+    .navbar.active{
+    display: flex;
+    align-items: center;
+    max-height: 300px;
+    padding: 10px 0px;
+    }
+
+    .hamburger {
+      display: block;
+    }
+
+    .search-bar {
+      width: 250px;
+    }
 }
