--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@ body{
     background-color: #0b203d;
 }
 header{
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -81,7 +82,7 @@ header{
 @media (max-width: 768px) {
     .navbar {
     position: absolute;
-    top: 73px;
+    top: 100%;
     right: 0px;
     width: 10em;
     display: none;
