--- a/styles/main.css
+++ b/styles/main.css
@@ -132,10 +132,14 @@ header{
     margin: 0 auto;
 }
 .product-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
     background: rgba(255, 255, 255, .1);
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 12px;
-    padding: 20px;
+    padding: 1rem;
     transition: transform 0.2s ease;
 }
 .product-card:hover {
@@ -145,21 +149,34 @@ header{
 
 .product-card img {
     width: 100%;
+    height: 200px;
+    object-fit: contain;
+    background-color: #f8f8f8; 
+    padding: 10px;
     border-radius: 8px;
     margin-bottom: 15px;
 }
-
-.buy-btn {
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    gap: 0.5rem;
+    margin-top: auto;
+}
+.buy-now-btn,
+.add-to-cart-btn {
+    flex: 1;
     background-color: #d52424;
     color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    font-weight: 500;
     border: none;
     padding: 10px 20px;
     margin-top: 10px;
-    cursor: pointer;
-    border-radius: 5px;
 }
-
-.buy-btn:hover {
+.buy-now-btn:hover,
+.add-to-cart-btn:hover {
     background-color: #a91e1e;
 }
 @keyframes fadeIn {
